--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 							<span data-animation="subtitle">
 								I'm a Front-End Developer located in Russia. I started programming
 								one year
-								ago and have been styduing Web Development at University all this time. Before that, I played
-								football prefessionally, but decided to choose my studies. Started by learning CSS3, HTML5
+								ago and have been stydying Web Development at University all this time. Before that I played
+								football prefessionally but decided to choose my studies. Started by learning CSS3, HTML5
 								and
 								JavaScript. Now I'm planning to start learning React.
 							</span>
